# quell

./: README.md  pyproject.toml
src/quell/: crew.py  main.py
src/quell/config/: agents.yaml  tasks.yaml
